--- a/_data/careers.yml
+++ b/_data/careers.yml
@@ -16,7 +16,7 @@
     detail: Maruti Techlabs (Ahmedabad)
     i18n: ucloud
   desc:
-    detail: Worked on many technologies with such web, mobile, cloud services for automative industry also worked on logistic startup.
+    detail: Worked on many technologies such as web, mobile, cloud services for automative industry also worked on logistic startup.
     i18n: ucloud_des
   date:
     detail: Oct. 2012
