--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,36 +1,35 @@
-- name: 'CourseSelect'
-  i18n: 'CourseSelect'
-  url: '/PENGZhaoqing/CourseSelect'
-  img: 'assets/img/profile/rails.png'
-  desc: 'This sample system is developed for the UCAS master course (Senior Software Engineering), aiming to help beginners to learn Rails'
+- name: 'Mr. Emoji'
+  i18n: 'Mr. Emoji'
+  url: '/Dipen-Dedania/mr-emoji'
+  img: 'assets/img/profile/npm.png'
+  desc: 'Lightweight emoji picker like SLACK'
   
-- name: 'Housepricing'
-  i18n: 'Housepricing'
-  url: '/PENGZhaoqing/Housepricing'
-  img: 'assets/img/profile/rails.png'
-  desc: 'A app to price the house in scientific way, which helps user to make better descision in buying or selling the houses'
+- name: 'IFTTT Boilerplate'
+  i18n: 'IFTTT Boilerplate'
+  url: '/Dipen-Dedania/ifttt-boilerplate'
+  img: 'assets/img/profile/ifttt.png'
+  desc: 'ifttt boilerplate with NodeJS & Express'
 
-- name: 'CampusPortal'
-  i18n: 'CampusPortal'
-  url: '/PENGZhaoqing/CampusPortal'
-  img: 'assets/img/profile/rails.png'
-  desc: 'CampusPortal is a campus portals information system, developed to provide as unified entrance for the faculties, students and app developers.'
+- name: 'Tensorflow Playground'
+  i18n: 'Tensorflow Playground'
+  url: '/Dipen-Dedania/tensorflow-playground'
+  img: 'assets/img/profile/tensorflow.png'
+  desc: 'You will find bunch of models with the code to play'
 
-- name: 'Here zhaoqing'
-  i18n: 'Personal Blog'
-  url: '/PENGZhaoqing/PENGZhaoqing.github.io'
-  img: 'assets/img/profile/jekyll.png'
-  desc: 'Here zhaoqing is an simple, beautiful and swift theme blog for Jekyll. It has comprehensive function, it can be easily used and edited.'
+- name: 'Chat App'
+  i18n: 'Chat App'
+  url: '/Dipen-Dedania/nodejs-socket-chat-app'
+  img: 'assets/img/profile/nodejs.png'
+  desc: 'A sample chat application with NodeJS and SocketIO'
 
-- name: 'Ucas_OnlineJudge'
-  i18n: 'OnlineJudge'
-  url: '/PENGZhaoqing/Ucas_OnlineJudge'
-  img: 'assets/img/profile/django.png'
-  desc: 'A distributed online judge platform for helping beginners learn programming in Chinese Academy of Science, currently supporting: Java, C, C++'
+- name: 'Ntire Sample'
+  i18n: 'Ntire Sample'
+  url: '/Dipen-Dedania/NTireSample'
+  img: 'assets/img/profile/dotnet.png'
+  desc: 'Enterprise application sample with .Net'
 
-- name: 'CourseSelect_en'
-  i18n: 'OnlineJudge'
-  url: '/PENGZhaoqing/CourseSelect_en'
-  img: 'assets/img/profile/rails.png'
-  desc: 'CourseSelect_en extends the original CourseSelect with OAuth 2.0 protocol, aiming to demonstrate the interactions between web apps and CampusPortal'
-
+- name: 'ReactJS Samples'
+  i18n: 'ReactJS Samples'
+  url: '/Dipen-Dedania/react-js'
+  img: 'assets/img/profile/reactjs.png'
+  desc: 'Learn ReactJs with samples'
