--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ author:
   bio              : "Nerd"
   location         : "Ahmedabad, India"
   email            : "dipen27891@gmail.com"
-  desc             : "A nerd, coder in UCAS with the interest of animations and battlefield :-)"
+  desc             : "Exception that you can not catch 😎"
   uri              :
   bitbucket        :
   codepen          :
